--- a/Masterarbeit 4/Tex/masterarbeit.tex
+++ b/Masterarbeit 4/Tex/masterarbeit.tex
@@ -5,11 +5,11 @@
 \email{bianka.hampp@uni-ulm.de}
 \headline{Vergleich der Anwendbarkeit von\\deklarativen und imperativen\\Prozessmodellierungsansätzen \\ im Kontext von \\  Softwareentwicklungsprozessen}
 \titel{Thema}
-\jahr{JAHR}
+\jahr{2014}
 \matnr{MATRIKEL NR}
-\gutachterA{Gutachter 1}
-%\gutachterB{Gutachter 2}
-%\betreuer{Betreuer}
+\gutachterA{Manfred Reichert}
+\gutachterB{Vera Künzle}
+\betreuer{Gregor Grambow}
 \typ{Masterarbeit }
 \fakultaet{Ingenieurwissenschaften\\und Informatik}
 \institut{Institut für Datenbanken und Informationssysteme}
