--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -20,7 +20,7 @@ Die sysntaktische Korrektheit wird dahingegend untersucht, ob sich die jeweilige
 Um den systematischen Aufbau der imperativen und deklarativen Prozessmodelle zu vergleichen, werden die Prozessmodelle dahingehend untersucht, in wie weit sie die Integration anderer Sichten in das Prozessmodell unterstützen und sie Verweise auf bestehende Datenmodelle zulassen. Da nicht alle Informationen, wie z.B. Daten und Funktionen in einem Prozessmodell abgebildet werden können, ist die Integration anderer Sichten in das Prozessmodell sehr wichtig, um wirklich alle Informationen aus dem Metamodell abbilden zu können. Hier können Rückschlüße auf die Eignung zur Modellierung gezogen werden und eventuelle Grenzen der Prozessmodellierungssprache aufgezeigt werden \cite{journals95, freund2007, becker2012prozessmanagement,koch2011}.
 
 \subsubsection{Relevanz}
-Beim Vergleich der Relevanz der Prozessmodelle werden die mit BPMN bzw. ConDec modellierten Prozessmodelle dahingehend verglichen in wie weit es möglich ist die Prozessmodelle mit den minimal relevanten Informationen zu erstellen. Es soll also untersucht werden, ob bei einer der beiden Prozessmodellierungssprachen mehr Informationen im Prozessmodell abgebildet werden müssen, als bei der anderen, um die Qualität des Prozessmodells zu sichern \cite{journals95, freund2007,reinshagen2009}. 
+Beim Vergleich der Relevanz der Prozessmodelle werden die mit BPMN bzw. ConDec modellierten Prozessmodelle dahingehend verglichen in wie weit es möglich ist die Prozessmodelle mit den minimal relevanten Informationen zu erstellen. Es soll also untersucht werden, ob bei einer der beiden Prozessmodellierungssprachen mehr Informationen im Prozessmodell abgebildet werden müssen, als bei der anderen, um die Qualität des Prozessmodells zu sichern. Weiterhin soll auch andersrum untersucht werden, ob bei einer der beiden Prozessmodellierungssprachen alle minimal relevanten Informationen des Metamodells dargestellt werden können. Hier kann widerum die Eignung der beiden Prozessmodellierungssprachen sehr gut verglichen werden, da falls mit einer Prozessmodellierungssprache nicht alle minimal relevanten Informationen des Metamodells abgebildet werden können, ist diese nicht zum Modellieren geeignet.\cite{journals95, freund2007,reinshagen2009}. 
 
 \subsubsection{Klarheit}
 Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier bei den imperativen Modellen die Anzahl an Verbindungen bzw. bei den deklarativen Modellen die Anzahl an Constraints zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
