--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -99,7 +99,7 @@ Die Aktivitäten \textit{alle 24 Stunden 15-minütiges Scrum-Meeting durchführe
 \subsection{Vergleich}
 
 Der Vergleich zwischen den in der deklarativen Prozessmodellierungssprache ConDec und dem in der imperativen Prozessmodellierungssprache BPMN erstellten Scrum Prozessmodellen wird im Folgenden anhand der in Kapitel 5 definierten Anforderungen durchgeführt. \newline
-Wie Abbildung \ref{fig:ScrumExcel} entnommen werden kann, unterscheidet sich die Anzahl der Aktivitäten zwischen den in BPMN und ConDec modellierten Prozessmodellen nicht voneinander. In jedem Prozessmodell gibt es 12 Aktivitäten.\newline
+Wie Abbildung \ref{fig:ScrumExcel} entnommen werden kann, unterscheidet sich die Anzahl der Aktivitäten zwischen den in BPMN und ConDec modellierten Prozessmodellen nicht voneinander. In jedem Prozessmodell gibt es 12 Aktivitäten. Damit handelt es sich hier um ein großes Modell.\newline
 
 \begin{figure}[htp]
 \begin{center}
@@ -110,20 +110,21 @@ Wie Abbildung \ref{fig:ScrumExcel} entnommen werden kann, unterscheidet sich die
 \end{figure}
 
 
-Zudem braucht es in BPMN sechs Gateways und 26 Sequenzflusselmente, um den Ablauf des Metamodells darzustellen. Bei Verwendung von ConDec werden 13 Constraints für den Ablauf der Aktivitten und sieben Existenz Constraints benötigt. In BPMN werden jedoch nur zwei verschiedene Verbindungselemente verwendet, während es in ConDec vier verschiedene Verbindungselemente sind.\newline
+Zudem braucht es in BPMN sechs Gateways und 26 Sequenzflusselmente, um den Ablauf des Metamodells darzustellen. Bei Verwendung von ConDec werden 13 Constraints (vier unterschiedliche) und sieben Existenz Constraints zur Darstellung der Abfolge der Aktivitäten benötigt. In BPMN werden sechs Gateways (zwei unterschiedliche) verwendet.\newline
 
-Die \textit{Richtigkeit} lässt sich mit BPMN in Bezug auf Rollen und Artefakte besser einhalten, als mit ConDec. Da es bei ConDec keine Möglichkeit gibt, Rollen und Artefakte im Prozessmodell zu visualisieren, fehlen diese Informationen. Die Rollen und Artefakte können zwar in Declare abgebildet werden, jedoch ist dies auf Papier/Bild nicht sichtbar. Aus desem Grund müssen diese Informationen beim Modellieren weggelassen werden, was zur Folge hat, dass das im Metamodell beschriebene Verhalten nicht vollständig abgebildet werden kann und somit leidet auch der Nutzen des Modells.\newline
+Die semantische \textit{Richtigkeit} lässt sich mit BPMN in Bezug auf Rollen und Artefakte besser einhalten, als mit ConDec. Da es bei ConDec keine Möglichkeit gibt, Rollen und Artefakte im Prozessmodell zu visualisieren, fehlen diese Informationen. Die Rollen und Artefakte können zwar in Declare abgebildet werden, jedoch gibt es in ConDec hierfür keine Notationselemente, um Rollen und Artefakte im Prozessmodell selbst sichtbar zu machen. Aus desem Grund müssen diese Informationen beim Modellieren weggelassen werden, was zur Folge hat, dass das im Metamodell beschriebene Verhalten nicht vollständig abgebildet werden kann und somit leidet auch der Nutzen des Modells.\newline
+Die syntaktische \textit{Richtigkeit} kann bei beiden Modellierungssprachen eingehalten werden, da bei beiden Prozessmodellierungssprachen die Notationsregeln zur korrekten Darstellung des Prozessablaufes eingehalten werden können.\newline
 
 Nur BPMN bietet die Möglchkeit, Artefakte im Prozessmodell zu visualisieren und lässt somit die Integration anderer Sichten in das Modell zu. Somit kann der Modellierungsgrundsatz des \textit{systematischen Aufbaus} nur von BPMN eingehalten werden. Da ConDec dies nicht zulässt, schmälert es die Eignung von ConDec zum Modellieren in Bezug auf Softwareprozessmodelle. Hierdurch können wichtige Informationen aus dem Metamodell nicht abgebildet werden. \newline 
 
-Beide Prozessmodelle können mit minimal relevanten Informationen erstellt werden. Bei keiner der beiden Modellierungssprachen war es notwendig, weitere Informationen zum Modell hinzuzufügen, um dessen Qualität zu erhöhen. Somit kann \textit{Relevanz} bei beiden Prozessmodellen eingehalten werden.\newline
+Nur die mit BPMN erstellten Prozessmodelle können mit minimal relevanten Informationen erstellt werden. Der Grund dafür ist widerum die fehlende Visualisierungsmöglichkeit von Rollen und Artefakten. Somit kann die \textit{Relevanz} nur von BPMN eingehalten werden.\newline
 
 
 
 
 Bei Untersuchung der \textit{Klarheit} lässt sich feststellen, dass sich die Anzahl der Aktivitäten nicht unterscheidet, jedoch die Anzahl der Gateways/Constraints und die Anzahl der unterschiedlichen Gateways/Constraints. Wie in Kapitel 5 bereits erwähnt, kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. In BPMN werden insgesamt zwei verschiedene Gateways (ein exklusives Gateway und ein paralleles Gateway) verwendet zur Darstellung von Verzweigungen. In ConDec werden vier verschiedene Constraints zur Darstellung verwendet. Da das Verständnis der Constraints in ConDec an sich relativ schwierig ist, ist das Verständnis eines Prozessmodelles mit vielen verschiedenen Constraints relativ schwer. Da die Anzahl der unterschiedlichen Constraints hier bei ConDec doppelt so hoch ist wie die Anzahl der Gateways bei BPMN und das mit ConDecmodellierte Prozessmodell dadurch sehr viel komplexer ist, als das mit BPMN modellierte Prozessmodell, ist hier BPMN trotz der höheren Anzahl an Elementen insgesamt das verständlichere Modell.\newline
 
-Die \textit{Wirtschaftlichkeit} unterschiedet sich nicht bei den beiden Modellierungssprachen. Bei BPMN müssen mehr Elemente (44) zum Modellieren des gleichen Sachverhaltes verwendet werden, wie bei ConDec (32). Bei ConDec hingegen werden mehr Constraints (13) benötigt als Gateways (6) bei BPMN. Hierdurch ist ein höherer geistiger Aufwand beim Modellieren mit ConDec notwendig, als bei BPMN. Im Falle einer doppelten Gewichtung der Constraints (13*2=26) und Gateways (6*2=12) und einer einfachen Gewichtung der Existenz-Constraints (7) in ConDec und der Sequenzflusselemente in BPMN (26), wäre die Summe der gewichteten Elemente in ConDec (26+7=33) und in BPMN (12+26=38) kaum noch unterschiedlich. Die Tatsache, dass in ConDec zudem vier unterschiedliche Constraints verwendet werden und in BPMN nur zwei unterschiedliche Gateways, gleicht den geistigen Aufwand für das modellieren der beiden Prozesse ziemlich aneinander an. \newline
+Die \textit{Wirtschaftlichkeit} unterschiedet sich nicht bei den beiden Modellierungssprachen. Bei BPMN müssen mehr Elemente (44) zum Modellieren des gleichen Sachverhaltes verwendet werden, wie bei ConDec (32). Bei ConDec hingegen werden mehr Constraints (13) benötigt als Gateways (6) bei BPMN. Die Tatsache, dass in ConDec zudem vier unterschiedliche Constraints verwendet werden und in BPMN nur zwei unterschiedliche Gateways, gleicht den geistigen Aufwand für das modellieren der beiden Prozesse ziemlich aneinander an. \newline
 Da BPMN zwar mehr Elemente insgesamt beim Modellieren benötigt und die Modellierung mit ConDec einen größeren geistigen Aufwand fordert, kann hier keine der beiden Prozessmodellierungssprachen bevorzugt werden.\newline
 
 Die \textit{Vergleichbarkeit} in Betracht des Ausführungsverhaltens der beiden Modelle wurde durch Testausführungen in den Modellierungstools Signavio und Declare gewährleistet.\newline
@@ -720,7 +721,7 @@ Bei dem Grundsatz der \textit{Richtigkeit} tritt bei ConDec wiederum das Problem
 
 Der Grundsatz des \textit{systematischen Aufbaus} kann wiederum nur von BPMN eingehalten werden, da ConDec keine Möglichkeit bietet, Artefakte ins Prozessmodell einzubinden.\newline
 
-Die \textit{Relevanz} lässt sich bei beiden Prozessmodellierungssprachen gut einhalten, denn es ist weder bei einem in ConDec erstellten Modell, noch bei einem in BPMN erstellten Modell notwendig, weitere Informationen zur Erhöhung der Qualität des Modells hinzuzufügen.\newline
+Die \textit{Relevanz} lässt sich nur bei BPMN einhalten, denn es ist wieder bei einem in ConDec erstellten Modell nicht möglich, Rollen und Artefakte zu visualisieren.\newline
 
 In Bezug auf die \textit{Klarheit} fällt gerade bei Betrachtung der Modelle der Phasen Inception, Elaboration, Construction und Transition auf, das bei Modellen bei denen mehrere Aktivitäten parallel zueinnander ablaufen in BPMN deutlich mehr Elemente zur Darstellung des gleichen Sachverhaltes notwendig sind, als in ConDec. Bei allen vier Modellen sind doppelt so viele, teilweise auch mehr als doppelt so viele Elemene zur Darstellung in BPMN notwendig, als in ConDec. Dies liegt an der Anzahl der Verbindungselemente. BPMN weißt eine hohe Anzahl an eingehenden und ausgehenden Kanten an den parallelen Gateways auf. Da die Parallelität in ConDec nicht durch Constraints dargestellt werden muss, werden in ConDec nur die Existenz-Constraints benötigt, um die Aktivitäten auf einmalige Ausführung zu beschränken. Da sich die hohe Anzahl an Verbindungselementen in BPMN negativ auf die Verständlichkeit auswirken kann und in ConDec nur die leicht verständlichen Existenz-Constraints verwendet werden, sind die ConDec-Modelle die leichter verständlichen Modelle. \newline
 Das Gleiche gilt für die Darstellung der Phasen des Open UP. Hier werden zur Darstellung des Prozesses in BPMN drei-mal so viele Elemente benötigt, wie in ConDec. Dies liegt hier an der hohen Anzahl der XOR-Gateways, die beim Modellieren des Prozesses notwendig sind. Somit ist auch hier das Modell, welches mit ConDec erstellt wurde das leichter verständliche. \newline
@@ -1073,7 +1074,7 @@ Sowohl BPMN, als auch ConDec können die syntaktische \textit{Richtigkeit} jedoc
  
 Der  Grundsatz des \textit{systematischen Aufbaus} kann bei ConDec wiederum nicht eingehalten werden, da keine Artefakte visualisiert werden können.\newline
 
-Der Grundsatz der \textit{Relevanz} kann wieder von beiden Prozessmodellierungssprachen eingehalten werden, da sich sowohl die ConDec-Modelle, als auch die BPMN-Modelle mit den minimal relevanten Informationen erstellen lassen.\newline
+Der Grundsatz der \textit{Relevanz} kann wieder nur von BPMN eingehalten werden, da es bei den ConDec-Modellen keine Visualisierungsmöglichkeiten für Rollen und Artefakte gibt.\newline
 
 
 Beim Grungsatz der \textit{Klarheit} gibt es Unterschiede zwischen den Modellen. Zur Darstellung der beiden Prozesse Systementwicklungsprojekt AG/AN und Inkrementelle Entwicklung werden in ConDec jeweils viele unterschiedliche Constraints benötigt (acht bei Systementwicklungsprojekt AG/AN und sechs bei Inkrementelle Entwicklung). Dies wirkt sich sehr negativ auf die Verständlichkeit aus, da sechs bis acht unterschiedliche, teilweise sehr komplexe Constraints verstanden werden müssen. Auch wenn BPMN bei diesen Modellen eine höhere Anzahl an Elementen insgesamt aufweist, weisen die beiden ConDec-Modelle eine höhere Komplexität auf, weswegen die BPMN-Modelle verständlicher sind. \newline
